--- a/main.css
+++ b/main.css
@@ -1,144 +1,208 @@
 audio {
-  margin-left: 550px;
+  outline: none;
+  filter: sepia(20%) saturate(70%) grayscale(1) contrast(99%) invert(12%);
+  width: 200px;
+  height: 25px;
 }
 
-button.start {
-  transition: background-color .7s ease;
-  background-color: #d50000;
-	border: none;
-	size: 40px;
-	border-radius: 10px;
-	margin-right: 20px;
-  margin-top: 8px;
-	padding: 10px;
+.audio-container {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
 }
 
-button.start:hover {
-  background-color: #65ea00;
+#down-arrow {
+  font-size: 12em;
+  display: flex;
+  justify-content: center;
+  font-family: "Sniglet", cursive;
 }
 
-button.reset {
-	transition: background-color .7s ease;
-	background-color: #2979ff;
-	border: none;
-	size: 40px;
-	border-radius: 10px;
-	margin-left: 20px;
-  margin-top: 8px;
-	padding: 10px;
+h2 {
+  font-family: "Sniglet", cursive;
+  font-weight: 800;
+  font-size: 4em;
+  display: flex;
+  justify-content: center;
 }
 
-button.reset:hover {
-	background-color: #ffeb3b;
+#start-icon {
+  width: 5vw;
 }
 
-.button {
-	display: flex;
-	justify-content: center;
-	font-family: 'Dokdo', cursive;
+#restart-icon {
+  width: 5vw;
 }
 
-p {
-	text-align: center;
-	font-family: 'Dokdo', cursive;
-	font-size: 20px;
+.gameplay-intro-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.gameplay-intro {
+  line-height: 3.5em;
+  letter-spacing: 0.3vw;
+  font-size: 1em;
+  margin-bottom: -12vh;
+  font-family: "Sniglet", cursive;
+}
+
+button {
+  transform: translate(-50%, -80%);
+  color: snow;
+  border: none;
+  border-radius: 10px;
+  outline: none;
+  background: linear-gradient(45deg, #db50ad, #0fc2c2, #eedf56);
+  background-size: 400% 400%;
+  box-shadow: 1vw 1vw 0 rgb(255, 130, 130);
+  cursor: pointer;
+  transition: all 0.3s ease;
+  padding: 10px;
+}
+button:hover {
+  animation: gradient 10s ease infinite;
+  box-shadow: 0.2vw 0.2vw 0 lightcoral;
+}
+
+@keyframes gradient {
+  50% {
+    background-position: 100% 0;
+  }
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.start-button {
+  width: 5vw;
+  border: none;
+  font-family: "Sniglet", cursive;
+  font-size: 1.2em;
+  outline: none;
+}
+
+.reset-button {
+  width: 6vw;
+  font-family: "Sniglet", cursive;
+  font-size: 1.2em;
+  outline: none;
+  text-align: center;
 }
 
 #new-phrase {
-	margin-left: 545px;
+  font-size: 1.2em;
+  font-family: "Sniglet", cursive;
+  padding-top: 30px;
+}
+
+.phrases-container {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 5px;
 }
 
 .cityscape {
-	display: grid;
-	grid-template-rows: 1fr 1fr 1fr;
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-template-areas:
-		"a, b, c"
-		"e, f, g"
-		"h, i, j";
-	width: 1100px;
-	height: 616px;
-	margin-top: 50px;
-	margin-left: 70px;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-areas:
+    "a, b, c"
+    "e, f, g"
+    "h, i, j";
+  width: 1100px;
+  height: 616px;
+  margin-top: 50px;
+  margin-left: 70px;
 }
 
-.clock {
-	display: flex;
-	justify-content: center;
+.clock-container {
+  display: flex;
+  justify-content: center;
+  padding-top: 10px;
 }
 
-.game {
-	display: flex;
-	flex-direction: row;
-	margin-left: 80px;
+#clock {
+  font-family: "Sniglet", cursive;
+  font-size: 1.5em;
+}
+
+.game-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
 }
 
 #hidden-img {
-	width: 1080px;
-	height: 615px;
+  width: 1080px;
+  height: 615px;
 }
 
-
 .a {
-	width: 100%;
-	height: 100%;
-	position: relative;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
 .b {
-	width: 100%;
-	height: 100%;
-	position: relative;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
 .c {
-	width: 100%;
-	height: 100%;
-	position: relative;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
 .d {
-	width: 100%;
-	height: 100%;
-	position: relative;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
 .e {
-	width: 100%;
-	height: 100%;
-	position: relative;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
 .f {
-	width: 100%;
-	height: 100%;
-	position: relative;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
 .g {
-	width: 100%;
-	height: 100%;
-	position: relative;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
 .h {
-	width: 100%;
-	height: 100%;
-	position: relative;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
 .i {
-	width: 100%;
-	height: 100%;
-	position: relative;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 /*cat*/
 .item1 {
-	position: absolute;
-	width: 40px;
-	height: 40px;
-	margin-left: 130px;
-	margin-top: 130px;
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  margin-left: 130px;
+  margin-top: 130px;
   -khtml-user-select: none;
   -o-user-select: none;
   -moz-user-select: none;
@@ -148,11 +212,11 @@ p {
 
 /*UFO*/
 .item2 {
-	position: absolute;
-	width: 30px;
-	height: 30px;
-	margin-left: 50px;
-	margin-top: 60px;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  margin-left: 50px;
+  margin-top: 60px;
   -khtml-user-select: none;
   -o-user-select: none;
   -moz-user-select: none;
@@ -162,11 +226,11 @@ p {
 
 /*3D glasses*/
 .item3 {
-	position: absolute;
-	width: 30px;
-	height: 30px;
-	margin-left: 30px;
-	margin-top: 90px;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  margin-left: 30px;
+  margin-top: 90px;
   -khtml-user-select: none;
   -o-user-select: none;
   -moz-user-select: none;
@@ -176,11 +240,11 @@ p {
 
 /*hive*/
 .item4 {
-	position: absolute;
-	width: 30px;
-	height: 30px;
-	margin-left: 10px;
-	margin-top: 50px;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  margin-left: 10px;
+  margin-top: 50px;
   -khtml-user-select: none;
   -o-user-select: none;
   -moz-user-select: none;
@@ -190,11 +254,11 @@ p {
 
 /*zombie*/
 .item5 {
-	position: absolute;
-	width: 30px;
-	height: 30px;
-	margin-left: 100px;
-	margin-top: 50px;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  margin-left: 100px;
+  margin-top: 50px;
   -khtml-user-select: none;
   -o-user-select: none;
   -moz-user-select: none;
@@ -204,19 +268,18 @@ p {
 
 /*ghost*/
 .item6 {
-	position: absolute;
-	width: 30px;
-	height: 30px;
-	margin-left: 140px;
-
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  margin-left: 140px;
 }
 /*garlic*/
 .item7 {
-	position: absolute;
-	width: 30px;
-	height: 30px;
-	margin-left: 100px;
-	margin-top: 100px;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  margin-left: 100px;
+  margin-top: 100px;
   -khtml-user-select: none;
   -o-user-select: none;
   -moz-user-select: none;
@@ -226,10 +289,10 @@ p {
 
 /*stop sign*/
 .item8 {
-	position: absolute;
-	width: 30px;
-	height: 30px;
-	margin-top: 150px;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  margin-top: 150px;
   -khtml-user-select: none;
   -o-user-select: none;
   -moz-user-select: none;
@@ -239,10 +302,10 @@ p {
 
 /*hot air baloon*/
 .item9 {
-	position: absolute;
-	width: 30px;
-	height: 30px;
-	margin-left: 130px;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  margin-left: 130px;
   -khtml-user-select: none;
   -o-user-select: none;
   -moz-user-select: none;
@@ -250,44 +313,38 @@ p {
   user-select: none;
 }
 
-p.scale-down-hor-center {
-	margin-left: 565px;
-	margin-top: 90px;
-	font-size: 25px;
+.background-color h2,
+#down-arrow {
+  color: #000;
+  letter-spacing: 1vw;
+  background: rgba(255, 253, 160, 1);
+  background: -webkit-linear-gradient(
+      left,
+      #d820f5e8 0%,
+      #97fba0 25%,
+      #ffca28 50%,
+      #e040fb 100%
+    )
+    repeat;
+  -webkit-background-clip: text;
+  -ms-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -ms-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+  text-fill-color: transparent;
+  -webkit-animation-name: masked-animation;
+  -webkit-animation-duration: 50s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
 }
 
-.scale-down-hor-center {
-	-webkit-animation: scale-down-hor-center 2s cubic-bezier(0.250, 0.460, 0.450, 0.940) reverse both;
-	        animation: scale-down-hor-center 2s cubic-bezier(0.250, 0.460, 0.450, 0.940) reverse both;
-}
-
-/* ----------------------------------------------
- * Generated by Animista on 2019-4-6 3:55:51
- * w: http://animista.net, t: @cssanimista
- * ---------------------------------------------- */
-
-/**
- * ----------------------------------------
- * animation scale-down-hor-center
- * ----------------------------------------
- */
-@-webkit-keyframes scale-down-hor-center {
+@-webkit-keyframes masked-animation {
   0% {
-    -webkit-transform: scaleX(1);
-            transform: scaleX(1);
+    background-position: 0 0;
   }
   100% {
-    -webkit-transform: scaleX(0.3);
-            transform: scaleX(0.3);
-  }
-}
-@keyframes scale-down-hor-center {
-  0% {
-    -webkit-transform: scaleX(1);
-            transform: scaleX(1);
-  }
-  100% {
-    -webkit-transform: scaleX(0.3);
-            transform: scaleX(0.3);
+    background-position: -8000px -3000px;
   }
 }
